# micropanel

./: CLAUDE.md  CMakeLists.txt  README.md  micropanel.service  micropanel.service.in  setup.sh
configs/: config-base.txt.in  config.txt  display-configs.conf  log-file-list.txt  pattern-list.txt
include/: Config.h  DeviceInterfaces.h  MenuScreenModule.h  MenuSystem.h  MicroPanel.h  ModuleDependency.h  MultiInputDevice.h  ScreenModules.h
screens/: config-pi-buildroot-minimal.json  config-pi-buildroot.json  config-pi-minimal.json  config-pios-new.json  config-pios.json  config-vivado.json
scripts/: S99Micropanel  collect-logs-to-usb.sh  dhcp-net-settings-buildroot.sh  fetch-images.sh  get-current-image.sh  get-current-pattern.sh  get-current-pattern.sh.in  list-images.sh  list-pattern.sh  list-pattern.sh.in  list-videos.sh  micropanel-detect-i2c.sh  micropanel-version.sh  network-data-info.sh  network-interfaces-list.sh  pi-config-txt.sh  pi-cpu-temp.sh  play-image.sh  play-pattern.sh  play-pattern.sh.in  play-video.sh  stop-image.sh  stop-pattern.sh  stop-pattern.sh.in  stop-video.sh
src/: MicroPanel.cpp  ModuleDependency.cpp  PersistentStorage.cpp
src/devices/: DeviceManager.cpp  DisplayDevice.cpp  Font8x8.cpp  I2CDisplayDevice.cpp  InputDevice.cpp  MultiInputDevice.cpp
src/menu/: Display.cpp
src/modules/: GenericListScreen.cpp  IPPingScreen.cpp  MenuScreenModule.cpp  NetInfoScreen.cpp  NetSettingsScreen.cpp  TextBoxScreen.cpp  ThroughputClientScreen.cpp  ThroughputServerScreen.cpp  WiFiSettingsScreen.cpp
utils/: launcher-client.c  patch-generator.c
